<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MultiLingual HIV Informatics</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="title_activity_english">English</string>
    <string name="aboutEn">Human Immunodeficiency Virus (HIV) and Acquired Immune Deficiency Syndrome(AIDS) is a spectrum of conditions caused by infection with the human immunodeficiency virus (HIV).Following initial infection, a person may not notice any symptoms or may experience a brief period of influenza-like illness. Typically, this is followed by a prolonged period with no symptoms. As the infection progresses, it interferes more with the immune system, increasing the risk of common infections like tuberculosis, as well as other opportunistic infections, and tumors that rarely affect people who have working immune systems. These late symptoms of infection are referred to as acquired immunodeficiency syndrome (AIDS). This stage is often also associated with weight loss.</string>
    <string name="symptEn">Abdominal Swelling,Abnormal vaginal discharge,Anxiety,Body Aches,Body Temperature,Confusion,Coughing,Dementia(Memory Loss),Depression,Diarrhoea,Fatigue,Fever,Forgetfulness,Gonorrhoea,Headache,Heavier or Lighter Periods,Itching in the Vaginal Area,Joint Pain(Rheumatism),Lower Abdominal Pain,Lung Infections,Missed periods (Amenorrhoea),Muscle Aches,Nausea,Night Sweats,Oral Itching,Pain in the Upper Right Abdomen,Painful Intercourse,Painful Urination,Recurrent Ear,Sexual Dysfunction,Skin Rash,Sore Throat,Soreness of the Vagina,Stomach Upset,Swollen Lymph Nodes (in the neck, or groin, or both),Ulcer on the Genitals,Ulcers in the Mouth,Vomiting,Weight Loss.</string>
    <string name="transEn">HIV is spread primarily by unprotected sex (including anal and oral sex), contaminated blood transfusions, hypodermic needles, and from mother to child during pregnancy, delivery, or breastfeeding. Some bodily fluids, such as saliva and tears, do not transmit HIV.</string>
    <string name="prevEn">Methods of prevention include safe sex, needle exchange programs, treating those who are infected, and Disease in a baby can often be prevented by giving both the mother and child antiretroviral medication. There is no cure or vaccine; however, antiretroviral treatment can slow the course of the disease and may lead to a near-normal life expectancy. Treatment is recommended as soon as the diagnosis is made. Without treatment, the average survival time after infection is 11 years.</string>
    <string name="diagEn">HIV diagnosis and treatment can be received at All Government Centers and community Health Centers in South African closer to the patient</string>
    <string name="title_activity_hausa">Hausa</string>
    <string name="aboutHa">Human immunodeficiency cutar kamuwa da cuta da kuma samu rigakafi kanjamau (HIV/AIDS)ne a bakan da yanayin lalacewa ta hanyar kamuwa da cuta da mutum immunodeficiency cutar (HIV) .Bin farko kamuwa da cuta, mutum na iya ba ka lura da wani bayyanar cututtuka ko iya samun wani taƙaitaccen lokaci na mura -like rashin lafiya. Yawanci, wannan da aka bi da wani jinkiri ba tare da wani bayyanar cututtuka. Kamar yadda da kamuwa da cuta progresses, shi tsarè more tare da rigakafi da tsarin, da kara hadarin kowa cututtuka kamar tarin fuka, kazalika da sauran opportunistic cututtuka, da kuma siffofin maruran da cewa da wuya shafi mutanen da suka yi aiki na rigakafi da tsarin. Wadannan marigayi cututtuka na kamuwa da cuta ana kira a matsayin samu immunodeficiency ciwo (AIDS). Wannan mataki ne sau da yawa ma dangantawa da nauyi asara.</string>
    <string name="symptHa">Alamun,ciki busa,mahaukaci farji sallama,Juyayi,Jiki Aches,yanayin jiki, daruɗewa,tari,gigin-tsufa (Memory Loss),Mawuyacin,zawo,gajiya,Fever,mantuwa,kabba da ciwon sanyi,ciwon kai,mutum ko M lokaci,itching a cikin azzakari cikin farji Area ,hadin gwiwa zafi (Rheumatism),Lower ciki zafi,Huhu cututtuka,da aka rasa lokutan (Amenorrhoea),Muscle Aches,Tashin zuciya,rika zufa da dare,baka itching,Pain a cikin Upper Dama ciki,mai raɗaɗi Maamala,mai raɗaɗi urination,Maimait.auk Kunnen,Jimai tabarbarewa,Skin Rash,ciwon makogwaro,Soreness na Farji,ciki damu,kumbura Lymph nodes (a cikin wuyansa, ko makwancin gwaiwa, ko duka biyu),miki a kan alaurar,ulcers a cikin bakinsa,aMAI,Weight Loss</string>
    <string name="transHa">HIV da aka yada da farko ta kuranye jimai (ciki har da tsuliya da kuma tarawa a baki), gurbata jini, hypodermic needles, kuma daga uwa zuwa jariri a lokacin daukar ciki, ceto, ko nono. Wasu jiki ruwaye, kamar yau da hawaye, kada aika da kwayar cutar HIV.</string>
    <string name="prevHa">hanyoyin da rigakafin hada da lafiya jimai, allura musayar shirye-shirye, zalunta wadanda suka kamu, da kuma cuta a cikin wani jariri sau da yawa za a hana ta ba da biyu da uwarsa da yaro maganin magani. Babu magani ko rigakafi. Duk da haka, maganin magani iya rage cikin shakka daga cikin cutar da kuma zai iya haifar da wani kusa-alada rayuwar jamaa. Jiyya bada shawarar da zaran ganewar asali da aka yi. Ba tare da lura, da talakawan rayuwa lokaci bayan kamuwa da cuta shi ne shekaru 11.</string>
    <string name="diagHa">cutar HIV ganewar asali da kuma lura za a iya samu a All gwamnatin Cibiyoyin kuma alumma Health Nigeria ta Kudu kusa da haƙuri</string>
    <string name="title_activity_igbo">Igbo</string>
	<string name="aboutIg">Human immunodeficiency virus ọrịa na enwetara dịghịzi erughi syndrome (HIV/AIDS)bụ a ụdịdị dị iche iche nke ọnọdụ kpatara ọrịa ya na mmadụ na immunodeficiency virus (HIV) .Nke mbụ ọrịa, mmadụ nwere ike ọ gaghị achọpụta ọ bụla mgbaàmà ma ọ bụ nwere ike na-enwe a mkpirikpi oge nke influenza -like ọrịa. A, nke a na-agbaso site a ruo ogologo oge na-enweghị ihe mgbaàmà. Dị ka ndị ọrịa na-aga nihu, ọ na-emetụtakarị ihe na dịghịzi usoro, na-amụba ihe ize ndụ nke nkịtị na-efe efe dị ka ụkwara nta, nakwa dị ka ndị ọzọ opportunistic na-efe efe, na etuto ahụ na-anaghị emetụta ndị na-arụ ọrụ ọgụ. Ndị a mbubreyo mgbaàmà nke ọrịa na-ezo dị ka enwetara immunodeficiency syndrome (AIDS). A na ogbo a na-na-ejikọta ya na arọ ọnwụ.</string>
	<string name="symptIg">abdominal ọzịza,ndiiche mmamiri agbapụta nahụ,Nchegbu,Isi aches,ahu okpomọkụ,mgbagwoju,anya,,ụkwara,mgbaka (Memory Loss),Iduọ Ndutịm Uforo,afọ ọsịsa,ike ọgwụgwụ,ahụ ọkụ,chefuo,gonorrhea,isi ọwụwa,arọ ma ọ bụ nihu nihu Oge,itching na mmamiri Area ,Joint Pain (Rheumatism),Lower abdominal mgbu,Lung-efe efe,azaghị oge (Amenorrhoea),Akwara aches,ọgbụgbọ,Night Sweats,Oral itching,Pain na Upper Rightafo,-egbumgbummekọahụ,-egbumgbu urination,Ntighari nti,mmekọahụ dysfunction,Skin ọkụ ọkụ,akpịrị akpịrị,Soreness nke ikpu,afo iwe iwe,fụrụ akpụ Lymph (na olu, ma ọ bụ ukwu, ma ọ bụ ma),ọnyá afọ na kenwe,Ọnya na nỌnụ,vomiting,arọ Loss</string>
	<string name="transIg">HIV na-agbasa bụ isi unprotected mmekọahụ (gụnyere gbasara ike na ọnụ nwee mmekọahụ), mmeru mmịnye ọbara, hypodermic ndudu, na site na nne na nwa noge ime, nnyefe, ma ọ bụ ara. Ụfọdụ aru oke mmiri, dị ka asu na anya mmiri na-adịghị na-ebunye HIV.</string>
	<string name="prevIg">Ụzọ nke mgbochi gụnyere mma mmekọahụ, agịga mgbanwe mmemme, na-emeso ndị na-ebute oria, na Ọrịa na a na nwa nwere ike na-gbochie site ninye ma ndị nne na nwa alụso nje virus ọgụ ọgwụ. E nweghị ọgwụgwọ ma ọ bụ ogwu; Otú ọ dị, alụso nje virus ọgụ ọgwụgwọ nwere ike jiri N ezie nke ọrịa na pụrụ iduga a nso-nkịtị ndu ndimmadu. Ọgwụgwọ na-atụ aro ka anya dị ka nchoputa e mere. Enweghị ọgwụgwọ, nkezi lanarị oge mgbe ọrịa bụ afọ 11.</string>
	<string name="diagIg">HIV na ịgwọ nwere ike natara na All Government Ụlọ Ọrụ na obodo Health Centers na Nigeria nso ọrịa</string>
    <string name="title_activity_yoruba">Yoruba</string>
	<string name="aboutYo">Human immunodeficiency kokoro ikolu ati ipasẹ ma aipe dídùn (HIV/AIDS)ni kan julọ.Oniranran ti awọn ipo ṣẹlẹ nipasẹ ikolu pẹlu awọn eniyan immunodeficiency virus (HIV) .Following ni ibẹrẹ ikolu, a eniyan ko le se akiyesi eyikeyi àpẹẹrẹ tabi o le ni iriri kan finifini akoko ti aarun -like aisan. Ojo melo, yi ti ni atẹle nipa a pẹ akoko pẹlu ko si aisan. Bi awọn ikolu progresses, o interferes siwaju sii pẹlu awọn ma, jijẹ ewu ti o wọpọ àkóràn bi iko, bi daradara bi miiran opportunistic àkóràn, ati awọn èèmọ ti o ṣọwọn ni ipa eniyan ti o ti ṣiṣẹ ma awọn ọna šiše. Awọn wọnyi pẹ àpẹẹrẹ ti ikolu ti wa ni tọka si bi ipasẹ immunodeficiency dídùn (AIDS). Yi ipele ti wa ni igba tun ni nkan ṣe pẹlu àdánù làìpẹ.</string>
	<string name="symptYo">inu Wiwu,ohun ajeji abẹ isun,Ṣàníyàn,Ara aches,Ara otutu,Ìdàrú,ikọ,Iyawere (Memory Loss),şuga,Ìgbẹgbuuru,rirẹ,iba,forgetfulness,Gonorrhea,orififo,wuwo tabi fẹẹrẹfẹ akoko,nyún ni abẹ Area ,Joint Ìrora (làkúrègbé),Lower inu,Lung àkóràn,o padanu akoko (Amenorrhoea),Isan aches,Ríru,Night ooru,Oral nyún,Ìrora ninu awọn Oke Right ikun,irora ajọṣepọ,irora Títọnìgbàgbogbo,Loorekoore Eti,Ibalopo alailoye,ara Rash,egbo ọfun,soreness ti awọn obo,Ìyọnu inu,wú omi-apa (ninu awọn ọrun, tabi koto itan, tabi mejeeji),ulcer lori awọn genitals,Àdáìjiná ni Mouth,ìgbagbogbo,Weight Loss</string>
	<string name="transYo">HIV ti wa ni tan nipataki nipa pa ibalopo (pẹlu furo ati roba ibalopo), ti doti eje, hypodermic abere, ati lati iya to omo re nigba oyun, ifijiṣẹ, tabi omo loyan. Diẹ ninu awọn bodily fifa, gẹgẹ bi awọn itọ ati omije, ko atagba HIV.</string>
	<string name="prevYo">ọna ti idena ni ailewu ibalopo, abẹrẹ paṣipaarọ eto, atọju awon ti o ti wa ni arun, ati ki o Arun ni a omo le igba ni idaabobo nipa fifun mejeeji omo ati iya antiretroviral gbígba. Nibẹ ni ko si ni arowoto tabi ajesara; sibẹsibẹ, antiretroviral itọju le fa fifalẹ awọn papa ti ni arun ati ki o le ja si a sunmọ-deede aye expectancy. Itoju ti wa ni niyanju bi ni kete bi awọn okunfa ti wa ni ṣe. Laisi itọju, awọn apapọ iwalaaye akoko lẹhin ti ikolu ni 11 years.</string>
	<string name="diagYo">HIV okunfa ati itoju le ti wa ni gba ni Gbogbo Government-iṣẹ ati awujo Health-iṣẹ ni Nigeria jo si awọn alaisan</string>
    
	

</resources>
