<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:scaleType="centerCrop"
    
    tools:context="${relativePackage}.${activityClass}" >

   <Button
        android:id="@+id/bStopHa"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        
        android:onClick = "TTS"
        android:background="@drawable/sp2"
    
    
        />
    
    
    <Button
        android:id="@+id/bSpeakHa"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        
        android:onClick = "TTS"
        android:background="@drawable/sp1"
        
    
        />
    
    
    
<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:id="@+id/scrollHa"
    android:layout_marginTop="50dp">
	
    <LinearLayout 
     android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    
    <TextView
        android:id="@+id/headHA1"
        android:layout_marginLeft = "5dp"
        android:layout_marginRight = "5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="HIV/AIDS"
        android:textStyle="bold"
        android:textColor= "#ffffff"
        android:textSize="18sp"/>
    
    <TextView
        android:id="@+id/notetxtHa1"
        android:layout_marginLeft = "5dp"
        android:layout_marginRight = "5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutHa"
        android:textColor= "#ffffff"
        android:textSize="16sp"/>
    
    <TextView
        android:id="@+id/headHA2"
        android:layout_marginLeft = "5dp"
        android:layout_marginRight = "5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Alamun:"
        android:textStyle="bold"
        android:textColor= "#ffffff"
        android:textSize="18sp"/>
    
    
     <TextView
        android:id="@+id/notetxtHa2"
        android:layout_marginLeft = "5dp"
        android:layout_marginRight = "5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/symptHa"
        android:textColor= "#ffffff"
        android:textSize="16sp"/>
    
     <TextView
        android:id="@+id/headHA3"
        android:layout_marginLeft = "5dp"
        android:layout_marginRight = "5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Transmission:"
        android:textStyle="bold"
        android:textColor= "#ffffff"
        android:textSize="18sp"/>
    
    
     <TextView
        android:id="@+id/notetxtHa3"
        android:layout_marginLeft = "5dp"
        android:layout_marginRight = "5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transHa"
        android:textColor= "#ffffff"
        android:textSize="16sp"/>
    
     <TextView
        android:id="@+id/headHA4"
        android:layout_marginLeft = "5dp"
        android:layout_marginRight = "5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Rigakafin:"
        android:textStyle="bold"
        android:textColor= "#ffffff"
        android:textSize="18sp"/>
    
    
     <TextView
        android:id="@+id/notetxtHa4"
        android:layout_marginLeft = "5dp"
        android:layout_marginRight = "5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prevHa"
        android:textColor= "#ffffff"
        android:textSize="16sp"/>
    
     <TextView
        android:id="@+id/headHA5"
        android:layout_marginLeft = "5dp"
        android:layout_marginRight = "5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bincike da kuma magance:"
        android:textStyle="bold"
        android:textColor= "#ffffff"
        android:textSize="18sp"/>
    
    
     <TextView
        android:id="@+id/notetxtHa5"
        android:layout_marginLeft = "5dp"
        android:layout_marginRight = "5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diagHa"
        android:textColor= "#ffffff"
        android:textSize="16sp"/>
    
     
     
    </LinearLayout>
</ScrollView>
    

</RelativeLayout>
